--- a/src/UserInterface/TestPrj.WebUI/TestPrj.WebUI.csproj
+++ b/src/UserInterface/TestPrj.WebUI/TestPrj.WebUI.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
-    <AssemblyName>SecretMadonna.Test.TestUI</AssemblyName>
-    <RootNamespace>SecretMadonna.Test.TestUI</RootNamespace>
+    <AssemblyName>SecretMadonna.TestPrj.WebUI</AssemblyName>
+    <RootNamespace>SecretMadonna.TestPrj.WebUI</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Exceptionless.AspNetCore" Version="4.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.5" />
   </ItemGroup>
 
