--- a/src/UserInterface/TestPrj.WebUI/TestPrj.WebUI.csproj
+++ b/src/UserInterface/TestPrj.WebUI/TestPrj.WebUI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Exceptionless.AspNetCore" Version="4.6.2" />
+    <PackageReference Include="Exceptionless.Extensions.Logging" Version="4.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.5" />
   </ItemGroup>
 
