--- a/src/UserInterface/TestPrj.MvcUI/Properties/launchSettings.json
+++ b/src/UserInterface/TestPrj.MvcUI/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52375",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:37004",
+      "sslPort": 44355
     }
   },
   "profiles": {
@@ -16,11 +16,11 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "TestPrj.WebUI": {
+    "TestPrj.MvcUI": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
