--- a/src/UserInterface/TestPrj.MvcUI/appsettings.json
+++ b/src/UserInterface/TestPrj.MvcUI/appsettings.json
@@ -1,9 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Trace",
+      //"Microsoft": "Warning",
+      //"Microsoft.Hosting.Lifetime": "Information",
+      "SecretMadonna": "Trace"
+    },
+    "Console": {
+      "IncludeScopes": true
     }
   },
   "AllowedHosts": "*",
